--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.gcs.asa.asagcs.HomeFragment">
+             tools:context="com.gcs.asa.asagcs.layout.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -15,7 +15,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher"
+            app:srcCompat="@drawable/ic_logo"
             android:id="@+id/imageView"
             android:paddingTop="50dp"
             android:paddingBottom="50dp"/>
@@ -33,7 +33,8 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginRight="10dp">
 
                 <TextView
                     android:text="Projects"
@@ -64,22 +65,37 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginRight="10dp">
 
                 <TextView
-                    android:text="Recent Projects"
+                    android:text="Recent Project"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView2"
+                    android:id="@+id/recentProjectTextView"
                     android:textSize="22dp"
-                    android:layout_weight="1"/>
-            </LinearLayout>
+                    android:paddingBottom="50dp"/>
 
+                <TextView
+                    android:text="Tehran Azadi Tower"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView24"
+                    android:paddingBottom="10dp"/>
+
+                <TextView
+                    android:text="Karaj Shah Abbasi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView25"
+                    android:paddingBottom="10dp"/>
+            </LinearLayout>
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginRight="10dp">
 
                 <TextView
                     android:text="Notifications"
@@ -94,7 +110,8 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginRight="10dp">
 
                 <TextView
                     android:text="Help"
