--- a/app/src/main/res/layout/fragment_left_view.xml
+++ b/app/src/main/res/layout/fragment_left_view.xml
@@ -2,6 +2,8 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.gcs.asa.asagcs.layout.LeftMainFragment">
+             tools:context="layout.LeftViewFragment">
+
+    <!-- TODO: Update blank fragment layout -->
 
 </FrameLayout>
