--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gcs.asa.asagcs.MainActivity">
+    tools:context="com.gcs.asa.asagcs.view.activitty.MainActivity">
 
     <LinearLayout
         android:orientation="horizontal"
